--- a/mia/Views/Player/HXPlayerActionBar.xib
+++ b/mia/Views/Player/HXPlayerActionBar.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXPlayerActionBar"/>
@@ -11,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="376" height="84"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AGH-IQ-PL2">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AGH-IQ-PL2">
                     <rect key="frame" x="68" y="27" width="45" height="30"/>
                     <animations/>
                     <state key="normal" title="上一首"/>
@@ -19,7 +20,7 @@
                         <action selector="previousButtonPressed" destination="-1" eventType="touchUpInside" id="OAW-8X-HHc"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rvo-Xc-lCr">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rvo-Xc-lCr">
                     <rect key="frame" x="173" y="27" width="30" height="30"/>
                     <animations/>
                     <state key="normal" title="播放"/>
@@ -27,7 +28,7 @@
                         <action selector="playButtonPressed" destination="-1" eventType="touchUpInside" id="ZFW-Er-xXV"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aS2-sR-4rY">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aS2-sR-4rY">
                     <rect key="frame" x="263" y="27" width="45" height="30"/>
                     <animations/>
                     <state key="normal" title="下一首"/>
@@ -38,6 +39,14 @@
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="AGH-IQ-PL2" firstAttribute="centerY" secondItem="wtf-1r-uuv" secondAttribute="centerY" id="4RJ-8W-z32"/>
+                <constraint firstItem="Rvo-Xc-lCr" firstAttribute="centerY" secondItem="wtf-1r-uuv" secondAttribute="centerY" id="AF1-xy-jU3"/>
+                <constraint firstItem="aS2-sR-4rY" firstAttribute="centerY" secondItem="wtf-1r-uuv" secondAttribute="centerY" id="Pf0-bE-Uce"/>
+                <constraint firstItem="AGH-IQ-PL2" firstAttribute="trailing" secondItem="wtf-1r-uuv" secondAttribute="centerX" multiplier="0.6" id="jWw-B7-UtT"/>
+                <constraint firstItem="Rvo-Xc-lCr" firstAttribute="centerX" secondItem="wtf-1r-uuv" secondAttribute="centerX" id="rMM-Fa-Vz4"/>
+                <constraint firstItem="aS2-sR-4rY" firstAttribute="leading" secondItem="wtf-1r-uuv" secondAttribute="centerX" multiplier="1.4" id="wh4-uM-zUZ"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="336" y="171"/>
