--- a/mia/Views/Player/HXPlayerInfoView.xib
+++ b/mia/Views/Player/HXPlayerInfoView.xib
@@ -6,7 +6,12 @@
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXPlayerInfoView"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXPlayerInfoView">
+            <connections>
+                <outlet property="singerLabel" destination="jpc-1U-pW3" id="Q8F-d2-rME"/>
+                <outlet property="songNameLabel" destination="XOg-lk-7Vt" id="NcA-AC-63k"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="GDl-ck-0sZ">
             <rect key="frame" x="0.0" y="0.0" width="393" height="74"/>
@@ -30,6 +35,9 @@
                     <rect key="frame" x="241" y="12" width="30" height="30"/>
                     <animations/>
                     <state key="normal" title="分享"/>
+                    <connections>
+                        <action selector="shareButtonPressed" destination="-1" eventType="touchUpInside" id="5m9-M5-70x"/>
+                    </connections>
                 </button>
             </subviews>
             <animations/>
