--- a/mia/Base.lproj/Login.storyboard
+++ b/mia/Base.lproj/Login.storyboard
@@ -44,8 +44,8 @@
                                     <constraint firstAttribute="width" secondItem="Dde-Ct-cGn" secondAttribute="height" multiplier="1:1" id="1fv-ZC-9W3"/>
                                 </constraints>
                             </imageView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GZ6-6a-j00">
-                                <rect key="frame" x="12" y="16" width="44" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GZ6-6a-j00">
+                                <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="PA0-4t-bd6"/>
                                     <constraint firstAttribute="width" secondItem="GZ6-6a-j00" secondAttribute="height" multiplier="1:1" id="i3P-35-jPI"/>
@@ -189,14 +189,14 @@
                             <constraint firstItem="yck-tL-Gdf" firstAttribute="top" secondItem="ec2-Wv-1IY" secondAttribute="bottom" constant="30" id="Ee5-vw-X1N"/>
                             <constraint firstItem="kNU-8Z-niv" firstAttribute="centerX" secondItem="MgH-Sh-6z1" secondAttribute="centerX" id="GSv-O9-WR3"/>
                             <constraint firstItem="yck-tL-Gdf" firstAttribute="top" secondItem="SJc-6Q-mb8" secondAttribute="bottom" id="IAc-ZQ-nlh"/>
-                            <constraint firstItem="GZ6-6a-j00" firstAttribute="leading" secondItem="MgH-Sh-6z1" secondAttribute="leading" constant="12" id="LEX-tM-lZ6"/>
+                            <constraint firstItem="GZ6-6a-j00" firstAttribute="leading" secondItem="MgH-Sh-6z1" secondAttribute="leading" id="LEX-tM-lZ6"/>
                             <constraint firstItem="61s-lC-Toq" firstAttribute="centerX" secondItem="TFN-mw-K2y" secondAttribute="centerX" id="MH2-NL-gEm"/>
                             <constraint firstItem="TFN-mw-K2y" firstAttribute="top" secondItem="kNU-8Z-niv" secondAttribute="bottom" constant="60" id="NFj-lp-OYR"/>
                             <constraint firstItem="Dde-Ct-cGn" firstAttribute="leading" secondItem="MgH-Sh-6z1" secondAttribute="leading" constant="-40" id="YPo-lr-xAi"/>
                             <constraint firstItem="ec2-Wv-1IY" firstAttribute="top" secondItem="TFN-mw-K2y" secondAttribute="bottom" constant="60" id="YnP-xe-nAB"/>
                             <constraint firstAttribute="trailing" secondItem="Dde-Ct-cGn" secondAttribute="trailing" constant="-40" id="Zwb-QT-I05"/>
                             <constraint firstItem="SJc-6Q-mb8" firstAttribute="top" secondItem="MgH-Sh-6z1" secondAttribute="top" id="aD5-95-pzB"/>
-                            <constraint firstItem="GZ6-6a-j00" firstAttribute="top" secondItem="BpJ-J0-J5r" secondAttribute="bottom" constant="16" id="ax1-ko-NP4"/>
+                            <constraint firstItem="GZ6-6a-j00" firstAttribute="top" secondItem="BpJ-J0-J5r" secondAttribute="bottom" id="ax1-ko-NP4"/>
                             <constraint firstItem="61s-lC-Toq" firstAttribute="width" secondItem="TFN-mw-K2y" secondAttribute="width" id="bpv-v4-flZ"/>
                             <constraint firstItem="SJc-6Q-mb8" firstAttribute="leading" secondItem="MgH-Sh-6z1" secondAttribute="leading" id="fFO-pD-LKs"/>
                             <constraint firstItem="Dde-Ct-cGn" firstAttribute="centerY" secondItem="MgH-Sh-6z1" secondAttribute="centerY" multiplier="0.5" id="hUw-Pp-3C7"/>
@@ -211,7 +211,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="25R-DE-tx6"/>
                     <connections>
-                        <outlet property="backButton" destination="GZ6-6a-j00" id="Krp-fX-bs5"/>
                         <outlet property="loginButton" destination="TFN-mw-K2y" id="3Ny-a3-v4C"/>
                         <outlet property="loginButtonBottomConstraint" destination="YnP-xe-nAB" id="FuL-mN-1CB"/>
                         <outlet property="loginView" destination="kNU-8Z-niv" id="WbF-o4-vni"/>
