--- a/mia/Views/HomePage/Radio/HXRadioView.xib
+++ b/mia/Views/HomePage/Radio/HXRadioView.xib
@@ -50,18 +50,6 @@
                         <action selector="starButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="cgy-dx-Mke"/>
                     </connections>
                 </button>
-                <label opaque="NO" contentMode="left" text="评论内容+♫地理位置信息" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="fmy-Es-e4Z" customClass="TTTAttributedLabel">
-                    <rect key="frame" x="45" y="413" width="230" height="20"/>
-                    <gestureRecognizers/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="lineSpacing">
-                            <real key="value" value="7"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="生如夏花" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZT2-TF-oW0">
                     <rect key="frame" x="45" y="14" width="230" height="20"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
@@ -74,13 +62,6 @@
                     <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享者昵称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gBx-px-WgB">
-                    <rect key="frame" x="120" y="379" width="80" height="20"/>
-                    <gestureRecognizers/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <progressView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WMI-Wc-Fx1">
                     <rect key="frame" x="45" y="285" width="230" height="5"/>
                     <constraints>
@@ -89,33 +70,36 @@
                     <color key="progressTintColor" red="0.2666666667" green="0.81960784310000001" blue="0.76078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <color key="trackTintColor" red="1" green="1" blue="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                 </progressView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQr-cc-VHC" customClass="HXRadioShareInfoView">
+                    <rect key="frame" x="25" y="365" width="270" height="203"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="0hi-7O-Uqb"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="0xj-fK-f7w"/>
                 <constraint firstItem="XRy-kE-hZ9" firstAttribute="top" secondItem="ZT2-TF-oW0" secondAttribute="baseline" constant="5" id="4C9-vI-fnM"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="top" secondItem="gBx-px-WgB" secondAttribute="bottom" constant="14" id="4hM-fA-H9p"/>
-                <constraint firstItem="gBx-px-WgB" firstAttribute="centerX" secondItem="wzP-as-myT" secondAttribute="centerX" id="5ha-OU-Fgw"/>
                 <constraint firstItem="XRy-kE-hZ9" firstAttribute="width" secondItem="ZT2-TF-oW0" secondAttribute="width" id="6xj-oq-1pf"/>
                 <constraint firstItem="ZT2-TF-oW0" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="13.5" id="7yx-jX-4FX"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerX" secondItem="Adt-yX-Kcn" secondAttribute="centerX" id="9RI-Mq-GaU"/>
                 <constraint firstItem="wzP-as-myT" firstAttribute="centerX" secondItem="Adt-yX-Kcn" secondAttribute="centerX" id="CgW-uw-Z7W"/>
                 <constraint firstItem="ZT2-TF-oW0" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="H2e-p2-lq5"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="Klb-b5-TXW"/>
                 <constraint firstItem="ZT2-TF-oW0" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="LvY-9F-2BE"/>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="-1" id="OCh-Kq-f2e"/>
-                <constraint firstItem="fmy-Es-e4Z" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="Ogg-gF-1RN"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="leading" secondItem="Adt-yX-Kcn" secondAttribute="leading" id="PEr-Bm-9E7"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="R15-Zk-3Zd"/>
                 <constraint firstItem="XRy-kE-hZ9" firstAttribute="centerX" secondItem="ZT2-TF-oW0" secondAttribute="centerX" id="ZDg-s5-PqR"/>
-                <constraint firstItem="gBx-px-WgB" firstAttribute="top" secondItem="wzP-as-myT" secondAttribute="bottom" constant="34" id="aJZ-qb-c3q"/>
+                <constraint firstItem="jQr-cc-VHC" firstAttribute="top" secondItem="wzP-as-myT" secondAttribute="bottom" constant="20" id="fuW-Iv-GSQ"/>
                 <constraint firstItem="wzP-as-myT" firstAttribute="top" secondItem="Adt-yX-Kcn" secondAttribute="bottom" constant="10" id="gDx-VG-7kD"/>
                 <constraint firstItem="EuO-ig-wsS" firstAttribute="centerY" secondItem="Adt-yX-Kcn" secondAttribute="centerY" id="hIe-Py-Nqj"/>
+                <constraint firstItem="jQr-cc-VHC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="25" id="ibD-jU-dbR"/>
+                <constraint firstAttribute="trailing" secondItem="jQr-cc-VHC" secondAttribute="trailing" constant="25" id="k4U-kJ-PIq"/>
                 <constraint firstItem="Adt-yX-Kcn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="65" id="lGy-uv-HfU"/>
                 <constraint firstItem="ZT2-TF-oW0" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="sdq-eu-6Gp"/>
                 <constraint firstItem="D9t-6x-o7k" firstAttribute="bottom" secondItem="Adt-yX-Kcn" secondAttribute="bottom" id="spj-XR-aiC"/>
                 <constraint firstItem="WMI-Wc-Fx1" firstAttribute="trailing" secondItem="Adt-yX-Kcn" secondAttribute="trailing" id="w2n-fo-0qt"/>
+                <constraint firstAttribute="bottom" secondItem="jQr-cc-VHC" secondAttribute="bottom" id="yIb-63-umP"/>
             </constraints>
             <connections>
                 <outlet property="frontCoverToStarVerticallySpaceConstraint" destination="gDx-VG-7kD" id="ka0-uR-hVJ"/>
@@ -123,14 +107,10 @@
                 <outlet property="frontCoverView" destination="Adt-yX-Kcn" id="p3x-e1-iFU"/>
                 <outlet property="playButton" destination="EuO-ig-wsS" id="pra-Sy-2Dp"/>
                 <outlet property="progressView" destination="WMI-Wc-Fx1" id="mi0-TT-bf2"/>
-                <outlet property="sharerNickNameLabel" destination="gBx-px-WgB" id="Tej-py-xns"/>
-                <outlet property="sharerNickNameToShrareContentVerticallySpaceConstraint" destination="4hM-fA-H9p" id="fh4-v9-vdh"/>
-                <outlet property="shrareContentLabel" destination="fmy-Es-e4Z" id="4yO-YB-NY4"/>
                 <outlet property="songNameLabel" destination="ZT2-TF-oW0" id="sQw-zK-RJv"/>
                 <outlet property="songNameToSongerNameVerticallySpaceConstraint" destination="4C9-vI-fnM" id="tcg-WU-hEz"/>
                 <outlet property="songerNameLabel" destination="XRy-kE-hZ9" id="Efp-qQ-71O"/>
                 <outlet property="starButton" destination="wzP-as-myT" id="fQu-cx-fy8"/>
-                <outlet property="starToSharerNickNameVerticallySpaceConstraint" destination="aJZ-qb-c3q" id="QJj-xs-llG"/>
             </connections>
             <point key="canvasLocation" x="535" y="383"/>
         </view>
